--- a/Backend/deployment.yaml
+++ b/Backend/deployment.yaml
@@ -25,7 +25,7 @@ spec:
       - name: ecr-registry-secret
       containers:
       - name: api
-        image: 407622020962.dkr.ecr.ap-south-1.amazonaws.com/backend:1
+        image: 353207798483.dkr.ecr.ap-south-1.amazonaws.com/back-end:40
         imagePullPolicy: Always
         env:
           - name: MONGO_CONN_STR
